T3ENCBE-104 fix overlapping issues when content tree is collapsed

--- a/Resources/Private/Frontend/Styles/BackendAreas/ContentTree.scss
+++ b/Resources/Private/Frontend/Styles/BackendAreas/ContentTree.scss
@@ -2,7 +2,10 @@ $content-tree-header-height: 43px;
 
 .scaffold-content-navigation {
     position: relative;
-    padding-bottom: $content-tree-header-height;
+
+    .navigation-tree-container {
+        padding-bottom: $content-tree-header-height;
+    }
 
     &:not(.content-tree--collapsed) {
         .scaffold-content-navigation-component {
